added the rest of the players and changed some css

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 | General
 -------------------------------------*/
 .row {
-  margin-left: 10%;
+  margin-left: 5%;
 }
 
 ul {
@@ -52,13 +52,12 @@ footer p {
 
 .card {
   margin: 20px;
-  width: 250px;
-  height: 370px;
+  width: 300px;
+  height: 400px;
   transition: all 0.6s ease-in;
   transform-style: preserve-3d;
   color: white;
   text-align: center;
-  /*line-height: 200px;*/
   position: relative;
   background-color: inherit;
 }
@@ -70,8 +69,8 @@ footer p {
   left: 0;
   backface-visibility: hidden;
   background: #562482;
-  width: 250px;
-  height: 370px;
+  width: 300px;
+  height: 400px;
 }
 
 .back {
@@ -91,5 +90,5 @@ footer p {
 }
 
 .card-text {
-  font-size: 85%;
+  font-size: 1rem;
 }
