--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+body {
+  margin: 0;
+}
+
+#canvas {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  display: block;
+  margin: 0 auto;
+  z-index: -1;
+}
+
 /*-------------------------------------
 | General
 -------------------------------------*/
@@ -10,8 +23,7 @@ ul {
 }
 
 canvas {
-  padding: 5%;
-  margin-top: 100px;
+  padding: 2%;
 }
 
 .rookie {
@@ -47,9 +59,6 @@ footer p {
 | Card
 -------------------------------------*/
 
-canvas {
-  height: 400px;
-}
 .card-container {
   perspective: 500;
 }
@@ -58,7 +67,7 @@ canvas {
   margin: 20px;
   width: 300px;
   height: 400px;
-  transition: all 0.6s ease-in;
+  transition: all .9s ease-in;
   transform-style: preserve-3d;
   color: white;
   text-align: center;
@@ -79,6 +88,7 @@ canvas {
 
 .back {
   transform: rotateY(180deg);
+  display: flex;
 }
 
 .card:hover {
@@ -95,4 +105,9 @@ canvas {
 
 .card-text {
   font-size: 1rem;
+}
+
+.rookie {
+  justify-content: center;
+  align-items: center;
 }
